Fix title wrapping on the text info page

--- a/src/pages/TextPage.css
+++ b/src/pages/TextPage.css
@@ -1,4 +1,4 @@
-#my-wrap {
+.my-wrap {
   white-space: normal;
 }
 
